--- a/deepALplus_alcs.ipynb
+++ b/deepALplus_alcs.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "6Ah8BlRcHbHq"
       },
@@ -286,16 +286,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "glOzgtIbfu0v"
       },
       "outputs": [],
       "source": [
-        "initseed = 100\n",
-        "NUM_QUERY = 2000\n",
-        "NUM_ROUND = 1\n",
-        "DATA_NAME = \"CIFAR10\""
+        "initseed = 100 # Set this value to 100 for CIFAR-10, MNIST, FashionMNIST, and SVHN datasets\n",
+        "NUM_QUERY = 2000 # The value specificies the labeling budget.\n",
+        "# For Each dataset, test for NUM_QUERY + initseed = round(label_ratio * Ns)\n",
+        "# where Ns denotes the number of samples in the training set\n",
+        "# label_ratio should be set as 1%, 5%, 10%, 15%, and 20%, respectively\n",
+        "NUM_ROUND = 1 # fix this value\n",
+        "DATA_NAME = \"CIFAR10\" # Change the dataset name here\n",
+        "# Several benchmark datasets are: CUFAE-10, CIFAR-100, MNIST, FashionMNIST, SVHN, and TinyImageNet"
       ]
     },
     {
@@ -304,20 +308,27 @@
         "Specificy the active learning strategy:\n",
         "1. \"EntropySampling\"\n",
         "2. \"ALCS_Diversity\"\n",
-        "3. \"RandomSampling\"\n",
         "4. \"LeastConfidence\"\n",
         "5. \"MarginSampling\"\n",
-        "6. \"KMeansSampling\"\n",
-        "7. \"VarRatio\"\n",
-        "8. \"BadgeSampling\"\n",
-        "9. \"CEALSampling\"\n",
-        "10. \"VAAL\"\n",
-        "11. \"WAAL\"\n",
-        "12. \"BALDDropout\"\n",
+        "6. \"LossPredictionLoss\"\n",
+        "7. \"BadgeSampling\"\n",
+        "8. \"CEALSampling\"\n",
+        "9. \"VAAL\"\n",
+        "10. \"WAAL\"\n",
+        "11. \"BALDDropout\"\n",
         "\n"
       ],
       "metadata": {
         "id": "V1BUSJ1_C9vq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note: ALCS_Diversity is our approach and it is named as \"DeepALCS\""
+      ],
+      "metadata": {
+        "id": "aFd6pkvr4jYf"
       }
     },
     {
@@ -328,7 +339,7 @@
       "metadata": {
         "id": "-_l9R294ChFG"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +574,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "QKqZ8BDu2tsb"
       },
@@ -588,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -978,7 +989,7 @@
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyMj5Pdzy9nof1QE+ckFsW5n",
+      "authorship_tag": "ABX9TyOL9I6tl9KtG9EFIzCMHBvS",
       "include_colab_link": true
     },
     "kernelspec": {
