--- a/deepALplus_alcs.ipynb
+++ b/deepALplus_alcs.ipynb
@@ -293,13 +293,14 @@
       "outputs": [],
       "source": [
         "initseed = 100 # Set this value to 100 for CIFAR-10, MNIST, FashionMNIST, and SVHN datasets\n",
+        "# For CIFAR-100, TinyImageNet datsets, set this value to 1000.\n",
         "NUM_QUERY = 2000 # The value specificies the labeling budget.\n",
         "# For Each dataset, test for NUM_QUERY + initseed = round(label_ratio * Ns)\n",
         "# where Ns denotes the number of samples in the training set\n",
         "# label_ratio should be set as 1%, 5%, 10%, 15%, and 20%, respectively\n",
         "NUM_ROUND = 1 # fix this value\n",
         "DATA_NAME = \"CIFAR10\" # Change the dataset name here\n",
-        "# Several benchmark datasets are: CUFAE-10, CIFAR-100, MNIST, FashionMNIST, SVHN, and TinyImageNet"
+        "# Several benchmark datasets are: CIFAR-10, CIFAR-100, MNIST, FashionMNIST, SVHN, and TinyImageNet"
       ]
     },
     {
@@ -989,7 +990,6 @@
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyOL9I6tl9KtG9EFIzCMHBvS",
       "include_colab_link": true
     },
     "kernelspec": {
