--- a/deepALplus_alcs.ipynb
+++ b/deepALplus_alcs.ipynb
@@ -300,7 +300,9 @@
         "# label_ratio should be set as 1%, 5%, 10%, 15%, and 20%, respectively\n",
         "NUM_ROUND = 1 # fix this value\n",
         "DATA_NAME = \"CIFAR10\" # Change the dataset name here\n",
-        "# Several benchmark datasets are: CIFAR-10, CIFAR-100, MNIST, FashionMNIST, SVHN, and TinyImageNet"
+        "# Several benchmark datasets are: CIFAR-10, CIFAR-100, MNIST, FashionMNIST, SVHN, and TinyImageNet\n",
+        "# Number of iterations for repeating each experiment\n",
+        "iteration = 10"
       ]
     },
     {
@@ -467,10 +469,6 @@
         "# sys.stdout = Logger(os.path.abspath('') + '/logfile/' + DATA_NAME+ '_'  + STRATEGY_NAME + '_' + str(NUM_QUERY) + '_' + str(NUM_INIT_LB) +  '_' + str(args_input.quota) + '_normal_log.txt')\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
-        "# start experiment\n",
-        "\n",
-        "iteration = 5\n",
-        "\n",
         "all_acc = []\n",
         "acq_time = []\n",
         "\n",
@@ -491,7 +489,6 @@
         "\telse:\n",
         "\t\tnet = get_net(dataset_name, args_task, device)\t\t\t# load network\n",
         "\tstrategy = get_strategy(ALstrategy, dataset, net, args_input, args_task)  # load strategy\n",
-        "\t# print(strategy)\n",
         "\tstart = datetime.datetime.now()\n",
         "  # generate initial labeled pool\n",
         "\tdataset.initialize_labels(initseed)\n",
@@ -500,10 +497,6 @@
         "  # only for special cases that need additional data\n",
         "\tnew_X = torch.empty(0)\n",
         "\tnew_Y = torch.empty(0)\n",
-        "\t# # print info\n",
-        "\t# print(args_task)\n",
-        "\t# print('RANDOM SEED {}'.format(4666))\n",
-        "\t# print(type(strategy).__name__)\n",
         "\t# One-time query for ALCS-Diversity\n",
         "\tif ALstrategy == 'ALCS_Diversity':\n",
         "\t\tstrategy.train()\n",
@@ -520,11 +513,6 @@
         "\t\t\tstrategy.train(model_name = ALstrategy)\n",
         "\t\telse:\n",
         "\t\t\tstrategy.train()\n",
-        "\t\t# preds = strategy.predict(dataset.get_test_data())\n",
-        "\t\t# acc[0] = dataset.cal_test_acc(preds)\n",
-        "\t\t# print('Round 0\\ntesting accuracy {}'.format(acc[0]))\n",
-        "\t\t# print('\\n')\n",
-        "\n",
         "\t\t# round 1 to rd\n",
         "\t\tfor rd in range(1, NUM_ROUND+1):\n",
         "\t\t\tprint('Round {}'.format(rd))\n",
@@ -550,12 +538,6 @@
         "\t\t\t# round rd accuracy\n",
         "\t\t\tpreds = strategy.predict(dataset.get_test_data())\n",
         "\t\t\tacc[rd] = dataset.cal_test_acc(preds)\n",
-        "\t\t\t# print('testing accuracy {}'.format(acc[rd]))\n",
-        "\t\t\t# print('\\n')\n",
-        "\t\t# print results\n",
-        "\t\t# print('SEED {}'.format(SEED))\n",
-        "\t\t# print(type(strategy).__name__)\n",
-        "\t\t# print(acc[-1])\n",
         "\t\tall_acc.append(acc[-1])\n",
         "\tprint(\"Iteration \"+str(iteration)+\" Finished!\")\n",
         "print(\"Mean of Acc across five iterations for \"+str(ALstrategy)+\" : \", np.mean(all_acc))\n",
@@ -896,10 +878,6 @@
         "  # only for special cases that need additional data\n",
         "\tnew_X = torch.empty(0)\n",
         "\tnew_Y = torch.empty(0)\n",
-        "\t# # print info\n",
-        "\t# print(args_task)\n",
-        "\t# print('RANDOM SEED {}'.format(4666))\n",
-        "\t# print(type(strategy).__name__)\n",
         "\t# One-time query for ALCS-Diversity\n",
         "\tif ALstrategy == 'ALCS_Diversity2':\n",
         "\t\tstrategy.train()\n",
@@ -916,10 +894,6 @@
         "\t\t\tstrategy.train(model_name = ALstrategy)\n",
         "\t\telse:\n",
         "\t\t\tstrategy.train()\n",
-        "\t\t# preds = strategy.predict(dataset.get_test_data())\n",
-        "\t\t# acc[0] = dataset.cal_test_acc(preds)\n",
-        "\t\t# print('Round 0\\ntesting accuracy {}'.format(acc[0]))\n",
-        "\t\t# print('\\n')\n",
         "\n",
         "\t\t# round 1 to rd\n",
         "\t\tfor rd in range(1, NUM_ROUND+1):\n",
@@ -946,12 +920,6 @@
         "\t\t\t# round rd accuracy\n",
         "\t\t\tpreds = strategy.predict(dataset.get_test_data())\n",
         "\t\t\tacc[rd] = dataset.cal_test_acc(preds)\n",
-        "\t\t\t# print('testing accuracy {}'.format(acc[rd]))\n",
-        "\t\t\t# print('\\n')\n",
-        "\t\t# print results\n",
-        "\t\t# print('SEED {}'.format(SEED))\n",
-        "\t\t# print(type(strategy).__name__)\n",
-        "\t\t# print(acc[-1])\n",
         "\t\tall_acc.append(acc[-1])\n",
         "\tprint(\"Iteration \"+str(iteration)+\" Finished!\")\n",
         "print(\"Mean of Acc across five iterations for \"+str(ALstrategy)+\" : \", np.mean(all_acc))\n",
