--- a/deepALplus_alcs.ipynb
+++ b/deepALplus_alcs.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "6Ah8BlRcHbHq"
       },
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "glOzgtIbfu0v"
       },
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "-_l9R294ChFG"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -389,13 +389,17 @@
         "args_input = {}\n",
         "dataset_name = DATA_NAME\n",
         "\n",
+        "# data, network, strategy\n",
+        "args_task = args_pool[dataset_name]\n",
+        "dataset = get_dataset(dataset_name, args_task)\t\t\t\t# load dataset\n",
+        "\n",
         "# repeate # iteration trials\n",
         "while (iteration > 0):\n",
         "\titeration = iteration - 1\n",
-        "\t# data, network, strategy\n",
-        "\targs_task = args_pool[dataset_name]\n",
+        "\t# # data, network, strategy\n",
+        "\t# args_task = args_pool[dataset_name]\n",
         "\n",
-        "\tdataset = get_dataset(dataset_name, args_task)\t\t\t\t# load dataset\n",
+        "\t# dataset = get_dataset(dataset_name, args_task)\t\t\t\t# load dataset\n",
         "\tif ALstrategy == 'LossPredictionLoss':\n",
         "\t\tnet = get_net_lpl(dataset_name, args_task, device)\t\t# load network\n",
         "\telif ALstrategy == 'WAAL':\n",
@@ -465,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "QKqZ8BDu2tsb"
       },
@@ -477,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
